add hover fx into search button

--- a/src/app/components/button.module.css
+++ b/src/app/components/button.module.css
@@ -4,3 +4,8 @@
     height: 3.125rem;
     width: 6.25rem;
 }
+
+.button:hover {
+    background: var(--primary-gold-120);
+    color: var(--primary-white-100);
+}
