--- a/src/components/cards/hotelCard.module.css
+++ b/src/components/cards/hotelCard.module.css
@@ -4,12 +4,14 @@
     min-width: 17.5rem;
     height: 27.5rem;
     border-radius: 0.625rem;
-    border: 1px solid var(--Primary-Blue-50, #8E959E);
-    box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.15);
+    border: 1px solid var(--primary-blue-50);
+    /* box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.15); */
 }
 
 .hotelCardWrapper:hover {
     cursor: pointer;
+    border: 1px solid var(--primary-blue-100);
+    box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.15);
 }
 
 .upSide{
@@ -57,7 +59,4 @@
     color: var(--primary-blue-50);
 }
 
-.row4 {
-    
-}
 
