--- a/src/components/cards/discount.module.css
+++ b/src/components/cards/discount.module.css
@@ -4,7 +4,7 @@
     align-items: center;
     padding: 0.44rem 0.64rem;
     border-radius: 0.3125rem;
-    width: 6.25rem;
+    width: fit-content;
     height: 1.875rem;
     gap: 0.31rem;
 }
