--- a/src/app/hotelDetails/hotelDetails.module.css
+++ b/src/app/hotelDetails/hotelDetails.module.css
@@ -31,17 +31,16 @@
     display: flex;
     margin-top: 1.25rem;
     justify-content: space-between;
-}
-
-.overview {
-    margin-bottom: 3.125rem;
+    background-color: var(--primary-white-100);
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
 }
 
 .amenity, .room {
     display: flex;
     flex-direction: column;
     gap: 1.25rem;
-    margin-bottom: 3.125rem;
 }
 
 .searchAgain {
