--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -44,6 +44,11 @@ body {
   }
 } */
 
+ul {
+  list-style-type: disc;
+  padding-left: 1rem;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -115,6 +120,11 @@ body {
   body {
     @apply bg-background text-foreground;
   }
+}
+
+.h0 {
+  font-size: 48px;
+  font-weight: 500;
 }
 
 h1 {
