--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -49,6 +49,12 @@ menu {
   padding-left: 1rem;
 }
 
+ol {
+  list-style-type: decimal;
+  padding-left: 1rem;
+  text-align: justify;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
