--- a/src/components/views/roomDetailsModal.module.css
+++ b/src/components/views/roomDetailsModal.module.css
@@ -22,11 +22,21 @@
     padding: 1rem;
 }
 
-.noScrollbar {
-    -ms-overflow-style: none; 
-    scrollbar-width: none;
+.customScrollbar::-webkit-scrollbar {
+    width: 10px;
+	background-color: var(--primary-blue-100);
+    border-radius: 10px;
 }
 
-.noScrollbar::-webkit-scrollbar {
-    display: none;
-  }
+.customScrollbar::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    border-radius: 10px;
+	background-color: var(--primary-white-100);
+}
+
+.customScrollbar::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: var(--primary-blue-100);
+}
