--- a/src/components/views/overallRatingScore.module.css
+++ b/src/components/views/overallRatingScore.module.css
@@ -5,4 +5,6 @@
     background-color: var(--primary-gold-120);
     color: var(--primary-white-100);
     padding: 0 0.5rem;
+    display: flex;
+    align-items: center;
 }
