--- a/src/app/hotelDetails/[hotelId]/hotelDetails.module.css
+++ b/src/app/hotelDetails/[hotelId]/hotelDetails.module.css
@@ -51,6 +51,7 @@
 
 .roomCards {
     display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
     row-gap: 1.25rem;
