add ZoomableImage component & fetch data for BookingHistory page

--- a/src/components/cards/bookingHistoryCard.module.css
+++ b/src/components/cards/bookingHistoryCard.module.css
@@ -1,7 +1,7 @@
 .cardContainer {
     display: flex;
     flex-direction: column;
-    gap: 0.94rem;
+    gap: 1.5rem;
 }
 
 .mainBody {
@@ -9,6 +9,7 @@
     flex-direction: row;
     justify-content: space-between;
     gap: 1.875rem;
+    margin-top: 0.5rem;;
 }
 
 .rightSide {
