--- a/src/components/views/overallRatingScore.module.css
+++ b/src/components/views/overallRatingScore.module.css
@@ -1,6 +1,7 @@
 .overallRating {
     min-width: 2rem;
     min-height: 1.625rem;
+    max-width: fit-content;
     border-radius: 0.5rem;
     background-color: var(--primary-gold-120);
     color: var(--primary-white-100);
