--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -1,20 +1,31 @@
 .headerWrapper {
-    padding: 0 100px 0 100px;
+    padding: 0 100px;
     height: 80px;
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr auto 1fr;
     align-items: center;
-    justify-content: space-between;
     background: var(--primary-blue-100);
     color: var(--primary-gold-100);
     margin-bottom: 2.5rem;
 }
 
-.leftSide {
-    height: 60px;
+.leftSide { 
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
+    gap: 25px;
 }
 
 .rightSide { 
     display: flex;
     flex-direction: row;
+    justify-content: end;
     gap: 25px;
+}
+
+.middle {
+    width: fit-content; 
+    display: flex;
+    justify-content: center;
+    padding: 0 20px;
 }
