--- a/src/components/forms/bookingForm.module.css
+++ b/src/components/forms/bookingForm.module.css
@@ -14,11 +14,19 @@
     padding: 1.06rem 0 1.06rem 1.25rem;
     width: 100%;
     border-radius: 0.625rem 0.625rem 0rem 0rem;  
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.title span {
+    font-size: 0.875rem;
 }
 
 .content {
     padding: 1.25rem;
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 1.25rem;
 }
