--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -6,6 +6,9 @@
     align-items: center;
     background: var(--primary-blue-100);
     color: var(--primary-gold-100);
+    position: sticky;
+    top: 0;
+    z-index: 1000;
     margin-bottom: 2.5rem;
 }
 
