--- a/src/components/forms/bookingForm.module.css
+++ b/src/components/forms/bookingForm.module.css
@@ -27,6 +27,6 @@
     padding: 1.25rem;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: start;
     gap: 1.25rem;
 }
